<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GameActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/layout_ui"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="@android:color/darker_gray">

        <LinearLayout
            android:id="@+id/layout_uiCartes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/txt_uiCartes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Cartes"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/txt_nbCartes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_nbCartes"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_uiTemps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/txt_uiTemps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Temps"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/txt_Temps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_Temps"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_uiScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/txt_uiScore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Score"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/txt_Score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/txt_Score"
                android:textColor="@android:color/black" />
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/layout_piles"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/pile98_1"
            android:layout_width="98dp"
            android:layout_height="84dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@android:color/darker_gray"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.25">

            <TextView
                android:id="@+id/txt_pile98_1"
                android:layout_width="55dp"
                android:layout_height="63dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="98" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/pile98_2"
            android:layout_width="98dp"
            android:layout_height="84dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@android:color/darker_gray"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.25">

            <TextView
                android:id="@+id/txt_pile98_2"
                android:layout_width="55dp"
                android:layout_height="63dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="98" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/pile1_1"
            android:layout_width="98dp"
            android:layout_height="84dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@android:color/darker_gray"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.75">

            <TextView
                android:id="@+id/txt_pile1_1"
                android:layout_width="55dp"
                android:layout_height="63dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="0" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/pile1_2"
            android:layout_width="98dp"
            android:layout_height="84dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@android:color/darker_gray"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.75">

            <TextView
                android:id="@+id/txt_pile1_2"
                android:layout_width="55dp"
                android:layout_height="63dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="0" />
        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:id="@+id/layout_cartes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout_cartesHaut"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/case_carte1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@android:color/darker_gray"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_carte1"
                    android:layout_width="55dp"
                    android:layout_height="63dp"
                    android:layout_gravity="center"
                    android:background="@color/cartesBG"
                    android:gravity="center"
                    android:text="@string/txt_carte1"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/case_carte2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@android:color/darker_gray"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_carte2"
                    android:layout_width="55dp"
                    android:layout_height="63dp"
                    android:layout_gravity="center"
                    android:background="@color/cartesBG"
                    android:gravity="center"
                    android:text="@string/txt_carte2"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/case_carte3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@android:color/darker_gray"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_carte3"
                    android:layout_width="55dp"
                    android:layout_height="63dp"
                    android:layout_gravity="center"
                    android:background="@color/cartesBG"
                    android:gravity="center"
                    android:text="@string/txt_carte3"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/case_carte4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@android:color/darker_gray"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_carte4"
                    android:layout_width="55dp"
                    android:layout_height="63dp"
                    android:layout_gravity="center"
                    android:background="@color/cartesBG"
                    android:gravity="center"
                    android:text="@string/txt_carte4"
                    android:textColor="@android:color/black" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_cartesBas"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/case_carte5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@android:color/darker_gray"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_carte5"
                    android:layout_width="55dp"
                    android:layout_height="63dp"
                    android:layout_gravity="center"
                    android:background="@color/cartesBG"
                    android:gravity="center"
                    android:text="@string/txt_carte5"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/case_carte6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@android:color/darker_gray"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_carte6"
                    android:layout_width="55dp"
                    android:layout_height="63dp"
                    android:layout_gravity="center"
                    android:background="@color/cartesBG"
                    android:gravity="center"
                    android:text="@string/txt_carte6"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/case_carte7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@android:color/darker_gray"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_carte7"
                    android:layout_width="55dp"
                    android:layout_height="63dp"
                    android:layout_gravity="center"
                    android:background="@color/cartesBG"
                    android:gravity="center"
                    android:text="@string/txt_carte7"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/case_carte8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@android:color/darker_gray"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_carte8"
                    android:layout_width="55dp"
                    android:layout_height="63dp"
                    android:layout_gravity="center"
                    android:background="@color/cartesBG"
                    android:gravity="center"
                    android:text="@string/txt_carte8"
                    android:textColor="@android:color/black" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>